# coliee2026_ABAI

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: COLIEE2026_Competition_Rules.md  COLIEE2026_Data_Structure.md  COLIEE_2024_RESULTS.md  COLIEE_2025_RESULTS.md  COLIEE_APPROACHES_REPORT.md  COMPETITION_RULES.md  DATA_STRUCTURE.md  EXPERIMENT_HISTORY.md  LITERATURE_REVIEW.md  NODE2_ACCESS.md  NOVEL_APPROACHES_SURVEY.md  TRAINING_STATUS.md
docs/plans/: 2026-03-11-graphrag-literature-review.md  2026-03-11-legal-graphrag-design.md  2026-03-11-legal-graphrag-implementation.md  2026-03-11-pipeline-options.md  2026-03-12-baseline-models-implementation.md  2026-03-12-codebase-refactor.md  2026-03-12-enhancement-options.md  2026-03-13-novel-pipeline-enhancements.md
notebooks/: data_check.py
scripts/: _c2_gpu_smoke.py  compare_ce_modes.py  run_ab_tests.py  run_ablation.py  run_bge_m3.py  run_c2_chunk_docker.sh  run_c2_diag_docker.sh  run_c2_docker.sh  run_c2_node2_4096.sh  run_ce_cov_docker.sh  run_combo_tests.py  run_gnn.py  run_gnn_fulldata.py  run_gnn_oof.py  run_ood_docker.sh  run_phase_ablation.py  run_qe_docker.sh  sweep_thresholds.py  train_pipeline.py  w1_c1_full.py  w1_e_stage_metrics.py  w2_b_calibration.py  w2_c2_chunk_diag.py  w2_c2_dense_recall.py  w2_c2_diag.py  w2_ood_embedding.py
scripts/_archive/: w1_c1_bm25_sweep.py  w1_d_refine.py  w1_d_temporal_split.py
scripts/experiments/: README.md  __init__.py  calibration.py  ce_coverage.py  common.py  date_filter.py  error_analysis.py  evt_cutoff.py  gar_recall.py  (+9 more)
tests/: conftest.py  test_extract_regex.py  test_gnn_reranker.py  test_graph.py  test_multi_retrieval.py  test_normalize.py  test_ollama_client.py  test_reasoning_reranker.py  test_retrieve.py  test_synthetic_data.py
(+89 files in other folders)
