[project]
name = "coliee2026"
version = "0.1.0"
description = "COLIEE 2026 Task 1: Legal Case Retrieval Pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.7.0",
    "flagembedding>=1.3.5",
    "httpx>=0.28.1",
    "igraph>=1.0.0",
    "leidenalg>=0.11.0",
    "lightgbm>=4.6.0",
    "marimo>=0.19.9",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "peft>=0.18.1",
    "pytest>=9.0.2",
    "rank-bm25>=0.2.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.2.3",
    "torch>=2.10.0",
    "torch-geometric>=2.7.0",
    "tqdm>=4.67.3",
    "transformers>=5.3.0",
    "xgboost>=3.2.0",
]

[project.scripts]
coliee-task1 = "coliee_task1.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/coliee_task1", "src/baselines"]

[tool.pytest.ini_options]
pythonpath = ["src"]
